# embedded-rust-start

./: .bash_history  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  Makefile.toml  README.md  cobertura.xml  run.gdb  tarpaulin-report.html
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
scripts/: build_unit_tests.sh  coverage.sh
scripts/check/: all.py  stm32f407.sh  tests.sh
scripts/run/: stm32f407.sh
scripts/startup/: openocd.sh  openocd_stm32f769.sh  watch.sh  watcher.sh
scripts/test/: local.sh
src/: error.rs  leds.rs  main.rs
