[package]
name = "blinky"
version = "0.1.0"
authors = ["seanybaggins <seli2854@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.thumbv7em-none-eabihf.dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
stm32f4xx-hal = {version = "0.8.3", features = ["stm32f407", "rt"], target = "thumbv7em-none-eabihf"}

[target.x86_64-unknown-linux-gnu]